Fix a few z-index CSS issues

--- a/bordercore/static/scss/_base.scss
+++ b/bordercore/static/scss/_base.scss
@@ -808,7 +808,7 @@ a.tag {
 }
 
 .toast-wrapper {
-  z-index: 100;
+  z-index: 300;
   line-height: 1.5rem;
 
   .toast-header {
